# pdf-manager

./: README.md  pyproject.toml
src/pdf_manager/: __main__.py
src/pdf_manager_gui/: __main__.py
