[project]
name = "pdf-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Mauro Regli",email = "Qurium@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.10.0,<7.0.0)",
    "ocrmypdf (>=16.12.0,<17.0.0)",
]

[tool.poetry]
packages = [{include = "pdf_manager", from = "src"}]

[tool.poetry.scripts]
pdf-manager = "pdf_manager.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
